--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,12 @@
               {% placeholder "new-image-2" %}
               <div class="new_text">
                 {% placeholder "new-text-2" %}
-              </div>
+              <div id="more_news">
+                 <p>       
+                 	{% placeholder "more_news" %}      	
+                 </p>
+              </div>     
+               </div>     
             </div>
           </div>
         </div>
@@ -57,6 +62,7 @@
         <div id="contact">
           {% placeholder "contact_link" %}
         </div>
+   
          <div id="facebook">
           <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new">Follow us on Facebook</a>
         </div>
