--- a/static/css/base.css
+++ b/static/css/base.css
@@ -79,7 +79,8 @@ border-radius: 10px;
 #footer {
     margin-top: 1ex;
     margin-bottom: 2ex;
-    bottom: 0px; width: 100%; 
+    bottom: 0px; width: 100%;
+    text-align: center;
     clear: both;
 }
 
