Project logo shown in every page

--- a/static/css/page.css
+++ b/static/css/page.css
@@ -19,6 +19,13 @@
    padding-top: .5ex;
 }
 
+#nav {
+  background: url('../img/Jellyrisk.png') no-repeat;
+  background-position: top right;
+  background-origin: content-box;
+  background-padding: 1ex;
+}
+
 #right { 
      float: right; 
      width: 718px; 
