--- a/static/css/home.css
+++ b/static/css/home.css
@@ -151,7 +151,7 @@ body {
   #sights_link {
     clear: both;
     width: 676px;
-    margin: 2ex auto;
+    margin: 2ex auto 5ex auto;
   }
 
 #footer {
