--- a/templates/store_locator/store_locator_map.html
+++ b/templates/store_locator/store_locator_map.html
@@ -1,8 +1,9 @@
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=true"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js" type="text/javascript"></script>
 
-<div class="locations_search_fields" style="display:none;">
+<div class="locations_search_fields">
     <form>
+      <div style="display: none;">
         <input type="text" id="locations_search_field" />
         {% if instance.show_distance %}
         <select id="distance_field">
@@ -13,8 +14,8 @@
         {% else %}
         <input type="hidden" id="distance_field" value="9999" />
         {% endif %}
-        <input type="submit" onClick="location_search(); return false;" value="Search" />
-        <ul class="location_types_list">
+      </div>
+      <ul class="location_types_list">
         {% for type in instance.show_location_types.all %}
             <li>
                 <input {% if forloop.first %}checked="checked" {% endif %}name="location_type_{{ instance.id }}" type="radio" class="location_type" id="type_{{ type.id }}" value="{{ type.id }}">
@@ -33,6 +34,7 @@
             </li>
         {% endfor %}
         </ul>
+       <input type="submit" onClick="location_search(); return false;" value="Filter" />
     </form>
 </div>
 
