--- a/templates/home.html
+++ b/templates/home.html
@@ -57,9 +57,13 @@
         <div id="contact">
           {% placeholder "contact_link" %}
         </div>
-         <div id="facebook">
-          <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new">Follow us on Facebook</a>
+     
+        <div id="facebook">
+         	<span>Follow as on:</span>
+          <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new"><img src="{{ STATIC_URL }}img/f.png"/></a>
+          <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new"><img src="{{ STATIC_URL }}img/t.png"/></a>
         </div>
+        
       </div>
     </div>
 
