--- a/templates/home.html
+++ b/templates/home.html
@@ -63,8 +63,10 @@
           {% placeholder "contact_link" %}
         </div>
    
-         <div id="facebook">
-          <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new">Follow us on Facebook</a>
+        <div id="social_networks">
+          <span>Follow as on:</span>
+          <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new"><img src="{{ STATIC_URL }}img/facebook.png"/></a>
+          <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new"><img src="{{ STATIC_URL }}img/twitter.png"/></a>
         </div>
       </div>
     </div>
