--- a/static/css/home.css
+++ b/static/css/home.css
@@ -158,18 +158,18 @@ body {
     margin-top: 1ex;
     margin-bottom: 2ex;
 }
-#facebook { 
-      background-color: #39B54A;
-      padding: 9px;
-      border-radius: 4px;
-      margin-top: 1ex;
-  } 
 
-  #facebook a {
-    color: white;
+#social_networks { 
+  background-color: #39B54A;
+  padding-left: 9px;
+  border-radius: 4px;
+  margin-top: 1ex;
+  color: white;
+}
+
+  #social_networks a {
     padding: 6px;
-    padding-left: 38px;
-    background: url('../img/facebook2.png') no-repeat; )
+    padding-left: 3px;
   } 
 
 #more_news {
