Fixing type and twitter URL

--- a/templates/home.html
+++ b/templates/home.html
@@ -64,9 +64,9 @@
         </div>
    
         <div id="social_networks">
-          <span>Follow as on:</span>
+          <span>Follow us on:</span>
           <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new"><img src="{{ STATIC_URL }}img/facebook.png"/></a>
-          <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new"><img src="{{ STATIC_URL }}img/twitter.png"/></a>
+          <a href="https://twitter.com/jellyrisk" target="new"><img src="{{ STATIC_URL }}img/twitter.png"/></a>
         </div>
       </div>
     </div>
