--- a/templates/page.html
+++ b/templates/page.html
@@ -27,7 +27,10 @@
         <ul id="nav">
          {% show_menu 0 100 0 100%}
         </ul>
-       </div>
+      </div>
+      {% if user.is_authenticated %}
+        <a href="/admin/logout/?next={% page_url request.current_page.parent %}">Logout</a>
+      {% endif %}
       </div>
 
 {% endblock %}
