--- a/templates/page.html
+++ b/templates/page.html
@@ -28,9 +28,11 @@
          {% show_menu 0 100 0 100%}
         </ul>
       </div>
-      {% if user.is_authenticated %}
-        <a href="/admin/logout/?next={% page_url request.current_page.parent %}">Logout</a>
-      {% endif %}
+      <div id="logout">
+        {% if user.is_authenticated %}
+          <a href="/admin/logout/?next={% page_url request.current_page.parent %}">Logout</a>
+        {% endif %}
+      </div>
       </div>
 
 {% endblock %}
