New template for logout included in page and home

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -111,3 +111,18 @@ border-radius: 10px;
   #left_logos {
     float:left;
   }
+
+#logout {
+  margin-left: 42px;
+  font-weight: bold;
+}
+
+  #logout a {
+    color: #4dc5d9;
+    text-decoration: none;
+  }
+  
+  #logout a:visited {
+    color: #4dc5d9;
+    text-decoration: none;
+  }
