--- a/templates/home.html
+++ b/templates/home.html
@@ -45,6 +45,7 @@
           {% show_menu 0 100 100 100 %}
         </ul>
       </div>
+      {% include "logout.html" %}
       <div id="tools">
         <div id="search">
         </div>
