Integrating search with home and page templates

--- a/templates/home.html
+++ b/templates/home.html
@@ -30,10 +30,10 @@
               </div>
             </div>
             <div id="more_news">
-               <p>       
-                {% placeholder "more_news" %}      	
+               <p>
+                {% placeholder "more_news" %}
                </p>
-            </div>     
+            </div>
           </div>
         </div>
       </div>
@@ -48,6 +48,10 @@
       {% include "logout.html" %}
       <div id="tools">
         <div id="search">
+          <form method="get" action="/search">
+            <input type="text" name="q" value""/>
+            <input type="submit" value="Search"/>
+          </form>
         </div>
         <div id="special_news">
           <div id="special_news_text">
@@ -63,7 +67,7 @@
         <div id="contact">
           {% placeholder "contact_link" %}
         </div>
-   
+
         <div id="social_networks">
           <span>Follow us on:</span>
           <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new"><img src="{{ STATIC_URL }}img/facebook.png"/></a>
