--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,12 +1,12 @@
-body { 
+body {
     color: #8b8b8b;
 }
 
 #left { float: left; width: 718px; }
 
-#right { 
-     float: right; 
-     width: 248px; 
+#right {
+     float: right;
+     width: 248px;
      padding: 12px;
      padding-top: .5ex;
 }
@@ -19,25 +19,44 @@ body {
     #project_description {
       color: #565555;
       text-align: left;
-      margin-bottom: 4ex; 
+      margin-bottom: 4ex;
       font-size: 120%;
       width: 95%;
     }
 
-    #project_description p { 
-      margin-top: 1ex; 
+    #project_description p {
+      margin-top: 1ex;
     }
 
-    #project_description span.plugin_link a { 
+    #project_description span.plugin_link a {
      display: inline;
     }
-  
+
     #dynamic_menu ul#nav {
       margin: 0;
       padding-left: 5px;
     }
 
-.plugin_link a { 
+#search {
+      margin: 0 auto 1ex auto;
+      background-color: #39b54a;
+      color: white;
+      border-radius: 4px;
+      height: 4ex;
+}
+
+  #search input {
+    float: left;
+    border: none;
+    margin: .5ex;
+    margin-top: .8ex;
+  }
+
+  #search input[type=text] {
+       width: 10em;
+  }
+
+.plugin_link a {
      display: block;
      color: #39b54a;
   }
@@ -56,14 +75,14 @@ body {
   #news {
     float: left;
   }
-   
-   #news .new { 
-       margin-bottom: 4ex; 
-       float: left; 
+
+   #news .new {
+       margin-bottom: 4ex;
+       float: left;
    }
 
-   #news .plugin_picture { 
-      float: left;     
+   #news .plugin_picture {
+      float: left;
       margin-right: 2em;
   }
      #news .plugin_picture img {
@@ -73,10 +92,10 @@ body {
 
    #news .new_text {
       width: 75%;
-      float: left;                      
+      float: left;
    }
 
-   #news .new_text h1 { 
+   #news .new_text h1 {
      color: #39b54a;
      font-size: 120%;
      margin-top: 0px;
@@ -90,10 +109,11 @@ body {
 
   #tools {
     margin: 2ex auto 0 auto;
-    width: 248px; 
+    width: 248px;
   }
 
-    #special_news { 
+    #special_news {
+      clear: both;
       margin: 0 auto 1ex auto;
       background-color: #39b54a;
       color: white;
@@ -102,7 +122,7 @@ body {
       padding: 6px;
     }
 
-    #special_news p { 
+    #special_news p {
       margin: 0 auto 0 auto;
     }
 
@@ -122,7 +142,7 @@ body {
       float: right;
     }
 
-  #picture_gallery { 
+  #picture_gallery {
       clear: both;
       text-align: center;
       background-color: #39B54A;
@@ -132,21 +152,21 @@ body {
 
   #picture_gallery a {
       color: white;
-  } 
+  }
 
-  #contact { 
+  #contact {
       background-color: #39B54A;
       padding: 6px;
       border-radius: 4px;
       margin-top: 1ex;
-  } 
+  }
 
   #contact a {
     color: white;
     padding: 6px;
     padding-left: 48px;
     background: url('../img/mail.png') no-repeat; )
-  } 
+  }
 
   #sights_link {
     clear: both;
@@ -159,7 +179,7 @@ body {
     margin-bottom: 2ex;
 }
 
-#social_networks { 
+#social_networks {
   background-color: #39B54A;
   padding-left: 9px;
   border-radius: 4px;
@@ -170,12 +190,12 @@ body {
   #social_networks a {
     padding: 6px;
     padding-left: 3px;
-  } 
+  }
 
 #more_news {
   text-align:right;
   color: #39B54A;
-  margin-bottom: 4ex; 
+  margin-bottom: 4ex;
   font-size: 120%;
   width: 95%;
 }
