Added links to partner logos

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,18 +43,18 @@
   {% block base_content %}{% endblock %}
   <div id="footer">
     <div id="right_logos">
-      <img src="{{ STATIC_URL }}img/EU.png"/>
-      <img src="{{ STATIC_URL }}img/ENPI.png"/>
+      <a href="http://ec.europa.eu/europeaid/index_en.htm" target="new"><img src="{{ STATIC_URL }}img/EU.png"/></a>
+      <a href="http://www.enpicbcmed.eu" target="new"><img src="{{ STATIC_URL }}img/ENPI.png"/></a>
     </div>
     <div id="left_logos">
       <p>
-        <img src="{{ STATIC_URL }}img/logo-icm-ca-csic.png"/>
-        <img src="{{ STATIC_URL }}img/maltalogo.png"/>
-        <img src="{{ STATIC_URL }}img/conismalogo.png"/>
+        <a href="http://www.icm.csic.es" target="new"><img src="{{ STATIC_URL }}img/logo-icm-ca-csic.png"/></a>
+        <a href="http://www.um.edu.mt/science/biology" target="new"><img src="{{ STATIC_URL }}img/maltalogo.png"/></a>
+        <a href="http://www.conisma.it" target="new"><img src="{{ STATIC_URL }}img/conismalogo.png"/></a>
       </p>
       <p>
-        <img src="{{ STATIC_URL }}img/tunez1.png"/>
-        <img src="{{ STATIC_URL }}img/tunez2.png"/>
+        <a href="http://www.fsb.rnu.tn" target="new"><img src="{{ STATIC_URL }}img/tunez1.png"/></a>
+        <a href="http://www.iresa.agrinet.tn/fr/instit/inat.htm" target="new"><img src="{{ STATIC_URL }}img/tunez2.png"/></a>
       </p>
     </div>
   </div>
