Adding another sightings link

--- a/templates/home.html
+++ b/templates/home.html
@@ -47,6 +47,9 @@
       </div>
       {% include "logout.html" %}
       <div id="tools">
+        <div id="sighting">
+          {% placeholder "sighting" %}
+        </div>
         <div id="search">
           <form method="get" action="/search">
             <input type="text" name="q" value""/>
