--- a/templates/page.html
+++ b/templates/page.html
@@ -28,6 +28,9 @@
        </ul>
      </div>
      {% include "logout.html" %}
+      <div id="sighting">
+        {% placeholder "sighting" %}
+      </div>
    </div>
 
 {% endblock %}
