--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load cms_tags menu_tags sekizai_tags i18n %}
 
+{% get_current_language as LANGUAGE_CODE %}
+
 {% block base_content %}
     {% addtoblock "css" %}
     <link rel="stylesheet" href="{{ STATIC_URL }}css/home.css">
@@ -51,14 +53,31 @@
           {% placeholder "sighting" %}
         </div>
         <div id="social_networks">
-          <span>Follow us on:</span>
+          {% ifequal LANGUAGE_CODE  'en' %}
+          <span>{% trans "Follow us on" %}:</span>
+          {% endifequal %}
+          {% ifequal LANGUAGE_CODE  'es' %}
+          <span>{% trans "Síguenos en" %}:</span>
+          {% endifequal %}
+          {% ifequal LANGUAGE_CODE  'ca' %}
+          <span>{% trans "Segueixnos a" %}:</span>
+          {% endifequal %}
+
           <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new"><img src="{{ STATIC_URL }}img/facebook.png"/></a>
           <a href="https://twitter.com/jellyrisk" target="new"><img src="{{ STATIC_URL }}img/twitter.png"/></a>
         </div>
         <div id="search">
           <form method="get" action="/search">
             <input type="text" name="q" value""/>
-            <input type="submit" value="Search"/>
+          {% ifequal LANGUAGE_CODE  'en' %}
+            <input type="submit" value="{% trans "Search" %}"/>
+          {% endifequal %}
+          {% ifequal LANGUAGE_CODE  'es' %}
+            <input type="submit" value="{% trans "Buscar" %}"/>
+          {% endifequal %}
+          {% ifequal LANGUAGE_CODE  'ca' %}
+            <input type="submit" value="{% trans "Cercar" %}"/>
+          {% endifequal %}
           </form>
         </div>
         <div id="special_news">
