Fix typo in catalan translation

--- a/templates/home.html
+++ b/templates/home.html
@@ -60,7 +60,7 @@
           <span>{% trans "Síguenos en" %}:</span>
           {% endifequal %}
           {% ifequal LANGUAGE_CODE  'ca' %}
-          <span>{% trans "Segueixnos a" %}:</span>
+          <span>{% trans "Segueix-nos a" %}:</span>
           {% endifequal %}
 
           <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new"><img src="{{ STATIC_URL }}img/facebook.png"/></a>
