--- a/templates/home.html
+++ b/templates/home.html
@@ -66,6 +66,9 @@
           <a href="https://www.facebook.com/Jellyrisk?ref=tn_tnmn" target="new"><img src="{{ STATIC_URL }}img/facebook.png"/></a>
           <a href="https://twitter.com/jellyrisk" target="new"><img src="{{ STATIC_URL }}img/twitter.png"/></a>
         </div>
+        <div id="sting_protocol">
+          {% placeholder "sting_protocol" %}
+        </div>
         <div id="search">
           <form method="get" action="/search">
             <input type="text" name="q" value""/>
