Adding div and place holders for a third news

--- a/templates/home.html
+++ b/templates/home.html
@@ -31,6 +31,12 @@
                 {% placeholder "new-text-2" %}
               </div>
             </div>
+            <div class="new">
+              {% placeholder "new-image-3" %}
+              <div class="new_text">
+                {% placeholder "new-text-3" %}
+              </div>
+            </div>
             <div id="more_news">
                <p>
                 {% placeholder "more_news" %}
