Basic logout handling, showing a page when succesfully logged out. This a patch done to avoid going to login page after logging out in a login required page.

--- a/templates/logout.html
+++ b/templates/logout.html
@@ -2,6 +2,6 @@
 
 <div id="logout">
   {% if user.is_authenticated %}
-    <a href="/accounts/logout/?next={{ request.path }}">Logout</a>
+    <a href="/accounts/logout/?next=/succesfully_loggged_out">Logout</a>
   {% endif %}
 </div>
