Add registration logic and required templates

--- a/templates/home.html
+++ b/templates/home.html
@@ -53,7 +53,8 @@
           {% show_menu 0 100 100 100 %}
         </ul>
       </div>
-      {% include "logout.html" %}
+     {% include "logout.html" %}
+     {% include "register.html" %}
       <div id="tools">
         <div id="sighting">
           {% placeholder "sighting" %}
