--- a/templates/page.html
+++ b/templates/page.html
@@ -27,6 +27,7 @@
        </ul>
      </div>
      {% include "logout.html" %}
+     {% include "register.html" %}
       <div id="sighting">
         {% placeholder "sighting" %}
       </div>
