--- a/templates/home.html
+++ b/templates/home.html
@@ -122,10 +122,11 @@
         <div id="contact">
           {% placeholder "contact_link" %}
         </div>
-
+        <div id="share">
+          {% include "share_buttons.html" %}
+        </div>
       </div>
     </div>
-
     <div id="sights_link">
         {% placeholder "sights_link" %}
       </div>
