--- a/templates/page.html
+++ b/templates/page.html
@@ -28,9 +28,10 @@
      </div>
      {% include "logout.html" %}
      {% include "register.html" %}
-      <div id="sighting">
-        {% placeholder "sighting" %}
-      </div>
+     <div id="sighting">
+       {% placeholder "sighting" %}
+     </div>
+     {% include "share_buttons.html" %}
    </div>
 
 {% endblock %}
