Little style fix in share buttons

--- a/templates/page.html
+++ b/templates/page.html
@@ -31,7 +31,9 @@
      <div id="sighting">
        {% placeholder "sighting" %}
      </div>
-     {% include "share_buttons.html" %}
+     <div id="share">
+       {% include "share_buttons.html" %}
+     </div>
    </div>
 
 {% endblock %}
