Update locales and fix some typos

--- a/templates/500.html
+++ b/templates/500.html
@@ -8,7 +8,7 @@
 
   <div id="page_content">
   <h2>{% trans "500 error" %}</h2>
-  <p>{% trans "A server error has occur. People on charge of the site has been repoted." %}</p>
+  <p>{% trans "A server error has occurred. People in charge of the site has been repoted." %}</p>
   <p>{% trans "Sorry for the inconvenience. You can try again going to" %}
     <a href="/">{% trans "home page" %}</p>
   </div>
