Refactor registration form template to have move control on form rendering. Add CSS.

--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,14 +1,24 @@
 {% extends "page.html" %}
 {% load cms_tags menu_tags sekizai_tags i18n %}
 
+
 {% block page_content %}
-<h2>{% trans "Register your user account" %}</h2>
-<div id="page_content">
-  <form method="post" action="" id="register-form">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="{% trans 'Register' %}" />
-    <input type="hidden" name="next" value="{{ next }}" />
-  </form>
-</div>
+  {% addtoblock "css" %}
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/registration_form.css">
+  {% endaddtoblock %}
+  <h2>{% trans "Register your user account" %}</h2>
+  <div id="page_content">
+    <form method="post" action="" id="register-form">
+      {% csrf_token %}
+      {% for field in form %}
+      <div id="field">
+        {{ field.label_tag }} {{ field }}
+        {{ field.errors }}
+        {{ field.help_text }}
+      </div>
+      {% endfor %}
+      <input type="submit" value="{% trans 'Register' %}" />
+      <input type="hidden" name="next" value="{{ next }}" />
+    </form>
+  </div>
 {% endblock %}
