--- a/static/css/registration_form.css
+++ b/static/css/registration_form.css
@@ -1,4 +1,20 @@
 #field {
-   margin-top: 1ex;
-   margin-bottom: 1ex;
+   margin-top: 1.5ex;
+   margin-bottom: 1.5ex;
+}
+
+ul.errorlist {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-weight: bold;
+}
+
+input[type=submit] {
+    padding: 1ex;
+    background-color: #39b54a;
+    color: white;
+    border-color: transparent;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    border-radius: 4px 4px 4px 4px;
 }
