--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,7 +10,7 @@
   <div id="container">
     <div id="header">
       <div id="branding">
-        <h1 id="site-name">Jellyrisk login</h1>
+        <h1 id="site-name">{%trans "Jellyrisk login" %}</h1>
       </div>
     </div>
     <div id="content" class="colM">
