--- a/templates/share_buttons.html
+++ b/templates/share_buttons.html
@@ -1,8 +1,8 @@
-<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-  <a class="addthis_button_facebook"></a>
-  <a class="addthis_button_twitter"></a>
-  <a class="addthis_button_google_plusone_share"></a>
-  <a class="addthis_button_email"></a>
+<div class="addthis_toolbox addthis_default_style addthis_20x20_style">
+  <a class="addthis_counter_facebook"></a>
+  <a class="addthis_counter_twitter"></a>
+  <a class="addthis_counter_google_plusone_share"></a>
+  <a class="addthis_button_compact"></a>
 </div>
 <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-530f9a3153b810bc"></script>
